packages/components/table/style/size.less
.table-size( @font-size, @head-height, @padding-horizontal, @padding-vertical) {
  font-size: @font-size;

  @line-height: calc(@font-size + var(--ix-line-height-gutter));

  line-height: @line-height;

  &:not(.@{table-prefix}-borderless) {
    > .@{header-prefix} {
      padding-left: @padding-horizontal;
      padding-right: @padding-horizontal;
    }
  }

  .@{table-prefix}-expandable-trigger {
    font-size: calc(@font-size + 2px);
  }
  .@{table-prefix}-expandable-wrapper {
    height: calc(100% + @padding-vertical * 2); // cell height + padding
    margin-top: -1px; // cell border bottom
  }

  th.@{table-prefix}-cell {
    height: @head-height;
    padding: 0 @padding-horizontal;

    .@{table-prefix}-sortable-trigger,
    .@{table-prefix}-filterable-trigger {
      height: @head-height;

      &:last-child {
        margin-right: calc(4px - @padding-horizontal);
      }
    }

    &:not(:last-child)::before {
      height: calc(@head-height / 2);
    }
  }

  td.@{table-prefix}-cell,
  .@{table-prefix}-alert-row > td,
  .@{table-prefix}-expanded-row > td {
    height: calc(@padding-vertical * 2 + @line-height);
    padding: @padding-vertical @padding-horizontal;
  }
  .@{table-prefix}-footer {
    min-height: calc(@padding-vertical * 2 + @line-height);
    padding: @padding-vertical @padding-horizontal;
  }

  .@{table-prefix}-fixed-row {
    margin-left: calc(@padding-horizontal * -1);
    padding-left: @padding-horizontal;
  }

  // TODO: Nest Table
}

.@{table-prefix}-sm {
  .table-size(var(--ix-table-font-size-sm), var(--ix-table-head-row-height-sm), var(--ix-table-cell-padding-horizontal-sm), var(--ix-table-cell-padding-vertical-sm));

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 36px;
  }

  .@{table-prefix}-col-indexable {
    width: 48px;
  }

  .@{table-prefix}-col-selectable&-col-with-dropdown {
    width: 56px;
  }

  .@{table-prefix}-pagination {
    padding: 8px 0;
  }
}

.@{table-prefix}-md {
  .table-size(var(--ix-table-font-size-md), var(--ix-table-head-row-height-md), var(--ix-table-cell-padding-horizontal-md), var(--ix-table-cell-padding-vertical-md));

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 40px;
  }

  .@{table-prefix}-col-indexable {
    width: 48px;
  }

  .@{table-prefix}-col-selectable.@{table-prefix}-col-with-dropdown {
    width: 60px;
  }
}

.@{table-prefix}-lg {
  .table-size(var(--ix-table-font-size-lg), var(--ix-table-head-row-height-lg), var(--ix-table-cell-padding-horizontal-lg), var(--ix-table-cell-padding-vertical-lg));

  .@{table-prefix}-col-expandable,
  .@{table-prefix}-col-selectable {
    width: 48px;
  }

  .@{table-prefix}-col-indexable {
    width: 60px;
  }

  .@{table-prefix}-col-selectable.@{table-prefix}-col-with-dropdown {
    width: 68px;
  }
}

